feat(specialty): optimize specialty module