@@ -4,15 +4,14 @@ import com.tiba.pts.core.dto.ErrorDetail;
 import com.tiba.pts.core.exception.DuplicateResourceException;
 import com.tiba.pts.core.exception.ResourceNotFoundException;
 import com.tiba.pts.modules.specialty.domain.entity.Level;
-import com.tiba.pts.modules.specialty.dto.LevelDto;
+import com.tiba.pts.modules.specialty.dto.request.LevelRequest;
+import com.tiba.pts.modules.specialty.dto.response.LevelResponse;
 import com.tiba.pts.modules.specialty.mapper.LevelMapper;
 import com.tiba.pts.modules.specialty.repository.LevelRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,29 +20,27 @@ public class LevelService {
   private final LevelRepository levelRepository;
   private final LevelMapper levelMapper;
 
-  public Long create(LevelDto dto) {
-    validateLevel(dto, null);
-    Level levelEntity = levelMapper.toEntity(dto);
+  public Long create(LevelRequest request) {
+    validateLevel(request, null);
+    Level levelEntity = levelMapper.toEntity(request);
     return levelRepository.save(levelEntity).getId();
   }
 
-  public List<LevelDto> getAll() {
-    return levelRepository.findAll().stream()
-        .map(levelMapper::toReponse)
-        .collect(Collectors.toList());
+  public List<LevelResponse> getAll() {
+    return levelRepository.findAll().stream().map(levelMapper::toReponse).toList();
   }
 
-  public Long update(Long id, LevelDto dto) {
+  public Long update(Long id, LevelRequest request) {
     Level existingLevel =
         levelRepository
             .findById(id)
             .orElseThrow(() -> new ResourceNotFoundException("LEVEL_NOT_FOUND"));
-    validateLevel(dto, id);
-    levelMapper.updateEntityFromDto(dto, existingLevel);
+    validateLevel(request, id);
+    levelMapper.updateEntityFromDto(request, existingLevel);
     return levelRepository.save(existingLevel).getId();
   }
 
-  private void validateLevel(LevelDto request, Long id) {
+  private void validateLevel(LevelRequest request, Long id) {
     List<ErrorDetail> conflicts = new ArrayList<>();
     boolean exists =
         (id == null)
